Menu, avatar and indeterminate loaders

--- a/apps/ionic/src/templates/items/favorite-item.html
+++ b/apps/ionic/src/templates/items/favorite-item.html
@@ -1,4 +1,4 @@
-<div class="item item-avatar item-button-right tracking-reminder-item"
+<div class="item item-avatar item-button-right tracking-reminder-item favorite-item"
      style="padding:0">
     <div class="row">
         <div id="favoriteItemIcon"
