--- a/apps/ionic/src/templates/loaders/blue-robot-loader.html
+++ b/apps/ionic/src/templates/loaders/blue-robot-loader.html
@@ -1,3 +1,6 @@
+<div class="center pulsating-glowing-text">
+    <h1 style="text-align: center; color: white;">Analyzing data...</h1>
+</div>
 <svg x="0px" y="0px" viewBox="0 0 500 500">
     <ellipse fill="#FFFFFF" cx="250" cy="250" rx="210.4" ry="213.7"/>
     <defs>
