--- a/apps/ionic/src/templates/loaders/red-robot-loader.html
+++ b/apps/ionic/src/templates/loaders/red-robot-loader.html
@@ -525,5 +525,7 @@
     </g>
 
 </svg>
-<h1 style="text-align: center;">Analyzing data...</h1>
+<div class="center pulsating-glowing-text">
+	<h1 style="text-align: center; color: white;">Analyzing data...</h1>
+</div>
 <!--Original Art by <a href="http://www.freepik.com/free-vector/enjoyable-love-cards-with-robots_861422.htm">Designed by Freepik</a> -->
