--- a/apps/ionic/src/templates/reminders-list.html
+++ b/apps/ionic/src/templates/reminders-list.html
@@ -3,6 +3,7 @@
     <ion-content scroll="true"
                  overflow-scroll="true"
                  ng-class="{ isBrowserView : platform.isWeb == true }">
+        <md-progress-linear md-mode="indeterminate" ng-show="state.loading"></md-progress-linear>
         <ion-refresher on-refresh="refreshReminders()"></ion-refresher>
         <div class="card"
              ng-if="state.showNoRemindersCard">
@@ -53,13 +54,15 @@
                 <div ng-if="trackingReminder.addMeasurement"
                      ng-include="'templates/items/favorite-item.html'"></div>
             </div>
-            <div id="addReminderButton"
-                 class="item item-icon-left"
-                 ng-click="addNewReminderButtonClick()">
+            <div ng-include="'templates/buttons/clear-filters-button.html'"></div>
+        </div>
+        <div class="center">
+            <md-button id="addReminderButton"
+                       class="rainbow-gradient-animation"
+                       ng-click="addNewReminderButtonClick()">
                 <i class="icon ion-plus positive"></i>
                 {{stateParams.addButtonText}}
-            </div>
-            <div ng-include="'templates/buttons/clear-filters-button.html'"></div>
+            </md-button>
         </div>
     </ion-content>
     <nav id="floatingActionButton"
