--- a/apps/ionic/src/templates/reminders-manage.html
+++ b/apps/ionic/src/templates/reminders-manage.html
@@ -9,15 +9,15 @@
                         Individual Notifications Disabled
                     </a>
                 </div>-->
-        <div ng-show="state.showButtons"
-             class="list card"
-             ng-click="addNewReminderButtonClick()">
-            <a id="addReminderButton"
+        <md-progress-linear md-mode="indeterminate" ng-show="state.loading"></md-progress-linear>
+        <md-button ng-show="state.showButtons"
+             class="rainbow-gradient-animation"
+             ng-click="addNewReminderButtonClick()"
+            id="addReminderButton"
                class="item item-icon-left">
                 <i class="icon ion-plus positive"></i>
                 {{stateParams.addButtonText}}
-            </a>
-        </div>
+        </md-button>
         <div class="card"
              ng-if="state.showTreatmentInfoCard && !(state.trackingReminders && state.trackingReminders.length)">
             <div class="item item-avatar">
