Create study button in studies list

--- a/apps/ionic/src/templates/studies-list-page.html
+++ b/apps/ionic/src/templates/studies-list-page.html
@@ -14,10 +14,9 @@
         </button>
     </ion-header-bar>
     <ion-content scroll="true" overflow-scroll="true" ng-class="{ isBrowserView : platform.isWeb == true }">
+	    <md-progress-linear ng-show="searching" md-mode="indeterminate"></md-progress-linear>
         <ion-refresher on-refresh="refreshList()"></ion-refresher>
         <div ng-show="searching">
-            <md-progress-linear md-mode="indeterminate"></md-progress-linear>
-            <h1 style="text-align: center; padding: 20px;">Analyzing data...</h1>
             <div style="max-width: 600px; display:block; margin:auto;"
                  ng-include="'templates/loaders/blue-robot-loader.html'">
             </div>
@@ -25,10 +24,14 @@
         <div ng-include="'templates/fragments/studies-list-fragment.html'"></div>
         <div class="list card" ng-show="state.noCorrelations">
             <div class="item" style="padding-bottom:0px;">
-                <p style=" text-align: center; line-height: normal; font-size: 25px;">Not enough data!</p>
+                <p style=" text-align: center; line-height: normal; font-size: 25px;">
+                    Not enough data!
+                </p>
                 <div class="row">
                     <div class="col" style="padding-top: 0px;">
-                        <i style="text-align: center; font-size: 60px;" class="icon positive ion-sad-outline"></i>
+                        <i style="text-align: center; font-size: 60px;"
+                           class="icon positive ion-sad-outline">
+                        </i>
                     </div>
                     <div class="col col-75">
                         <h2 style="white-space: normal; text-align: center; line-height: normal; ">
@@ -38,7 +41,8 @@
                 </div>
                 <div class="row">
                     <div class="button-bar">
-                        <button class="button button-clear button-balanced" style="font-size: 14px;"
+                        <button class="button button-clear button-balanced"
+                                style="font-size: 14px;"
                                 ng-click="goToState('app.reminderSearch')">
                             <i class="ion-plus-round">
                                 &nbsp; Add a reminder &nbsp;
@@ -48,6 +52,13 @@
                 </div>
             </div>
         </div>
+	    <div class="align-content-center center">
+		    <md-button class="align-content-center center" ng-click="goToState('app.studyCreation')">
+			    <i class="ion-plus">
+				    Create a Study
+			    </i>
+		    </md-button>
+	    </div>
         <div class="button-bar" ng-show="!state.noCorrelations && state.showLoadMoreButton && !searching">
             <a class="button button-clear button-positive" ng-click="loadMore()" style="text-overflow: clip;">
                 <i class="ion-refresh">
