Blue card and info card button

--- a/apps/ionic/src/templates/fragments/help-info-card-fragment.html
+++ b/apps/ionic/src/templates/fragments/help-info-card-fragment.html
@@ -1,6 +1,7 @@
 <div class="card" ng-if="!helpCard.hide" id="{{helpCard.id}}" style="background-color: #2E294E; border-radius: 15px">
-    <div id="helpInfoCardHeader" class="item item-avatar item-borderless"
-         style="background-color: #2E294E; padding-left: 0; padding-right: 0">
+    <div id="helpInfoCardHeader" 
+         class="item item-avatar item-borderless"
+         style="background-color: #2E294E; padding-left: 0; padding-right: 0; box-shadow: none;">
     <span style="position: absolute; top: 15px; left: 15px; font-size: 36px; max-width: 40px; max-height: 40px; width: 100%; border-radius: 4px;">
         <i ng-if="helpCard.icon" class="icon balanced {{helpCard.icon}}"></i>
         <img style="max-width: 40px; max-height: 40px;"
