--- a/apps/ionic/src/templates/dialogs/robot-confirmation.html
+++ b/apps/ionic/src/templates/dialogs/robot-confirmation.html
@@ -1,4 +1,5 @@
-<md-dialog aria-label="{{ctrl.title}}" style="overflow: visible;"> <!--Opacity 1 here didn't fix iPhone5 problem-->
+<md-dialog aria-label="{{ctrl.title}}" 
+           style="overflow: visible;"> <!--Opacity 1 here didn't fix iPhone5 problem-->
     <form ng-cloak style="overflow: visible">
         <md-toolbar>
             <div class="md-toolbar-tools">
@@ -28,11 +29,17 @@
             </div>
         </md-dialog-content>
         <md-dialog-actions layout="row">
-            <md-button id="helpButton" ng-click="answer('help')" ng-if="!platform.isMobile" style="min-width: 40px;">
+            <md-button id="helpButton"
+                       class="rainbow-gradient-background"
+                       ng-click="answer('help')" ng-if="!platform.isMobile" style="min-width: 40px;">
                 Help
             </md-button>
-            <md-button id="noButton" ng-click="answer('no')" style="min-width: 40px;">{{ctrl.noText}}</md-button>
-            <md-button id="yesButton" ng-click="answer('yes')" style="min-width: 40px;">Yes</md-button>
+            <md-button id="noButton"
+                       class="rainbow-gradient-background"
+                       ng-click="answer('no')" style="min-width: 40px;">{{ctrl.noText}}</md-button>
+            <md-button id="yesButton"
+                       class="rainbow-gradient-background"
+                       ng-click="answer('yes')" style="min-width: 40px;">Yes</md-button>
         </md-dialog-actions>
     </form>
 </md-dialog>
