--- a/apps/dfda-1/public/app/public/css/app.css
+++ b/apps/dfda-1/public/app/public/css/app.css
@@ -3883,17 +3883,19 @@ a.subdued {
   border-style: solid;
   border-top: 1px solid transparent;
   border-bottom: 1px solid #ddd;
-  background-color: white;
+  /* background-color: white; */
   /* border-width: 1px will actually create 2 device pixels on retina */
   /* this nifty trick sets an actual 1px border on hi-res displays */
-  background-size: 0; }
+  background-size: 0;
+  }
   @media (min--moz-device-pixel-ratio: 1.5), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     .bar {
       border: none;
       background-image: linear-gradient(0deg, #ddd, #ddd 50%, transparent 50%);
       background-position: bottom;
       background-size: 100% 1px;
-      background-repeat: no-repeat; } }
+      background-repeat: no-repeat;
+      } }
   .bar.bar-clear {
     border: none;
     background: none;
@@ -6421,7 +6423,7 @@ button.item.item-button-right {
   background-color: #f5f5f5;
   color: #222;
   font-weight: 500;
-  background-color: rgba(255, 255, 255, .15);
+  /*background-color: rgba(255, 255, 255, .15);*/
   backdrop-filter: blur(5px);
   box-shadow: 0 1px 3px rgb(0 0 0 / 30%);
   }
@@ -7475,7 +7477,11 @@ ion-slides {
  */
 .spinner {
   stroke: #444;
-  fill: #444; }
+  fill: #444;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
   .spinner svg {
     width: 28px;
     height: 28px; }
@@ -8963,18 +8969,22 @@ progress {
     opacity: 0.3; }
 
 .button-outline {
-  -webkit-transition: opacity 0.1s;
-  transition: opacity 0.1s;
-  background: none;
-  box-shadow: none; }
-  .button-outline.button-outline {
-    border-color: transparent;
-    background: transparent;
-    color: transparent; }
-    .button-outline.button-outline.active, .button-outline.button-outline.activated {
-      background-color: transparent;
-      box-shadow: none;
-      color: #fff; }
+	-webkit-transition: opacity 0.1s;
+	transition: opacity 0.1s;
+	background: none;
+	margin: 5px;
+	border-radius: 50px;
+	padding-left: 15px;
+	padding-right: 15px;
+	box-shadow: none; }
+.button-outline.button-outline {
+	border-color: transparent;
+	background: transparent;
+	color: transparent; }
+.button-outline.button-outline.active, .button-outline.button-outline.activated {
+	background-color: transparent;
+	box-shadow: none;
+	color: #fff; }
 
 .padding > .button.button-block:first-child {
   margin-top: 0; }
@@ -9614,7 +9624,12 @@ a.button {
   color: #444; }
 
 .dark-bg {
-  background-color: #444; }
+  background-color: #444;
+}
+
+.white-text {
+	color: white;
+}
 
 .dark-border {
   border-color: #111; }
@@ -10572,7 +10587,7 @@ button.md-button::-moz-focus-inner {
   padding-left: 12px;
   padding-bottom: 8px;
   margin: 6px 8px;
-  background: transparent;
+  /*background: transparent;*/
   color: currentColor;
   white-space: nowrap;
   /* Uppercase text content */
@@ -10584,12 +10599,8 @@ button.md-button::-moz-focus-inner {
   font-family: inherit;
   text-decoration: none;
   overflow: hidden;
-	background-color: rgba(255, 255, 255, .15);
-	backdrop-filter: blur(5px);
-	box-shadow: 0 1px 3px rgb(0 0 0 / 30%);
-	color: white;
-  /* transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1); */
-  }
+  transition: box-shadow 0.4s cubic-bezier(0.25, 0.8, 0.25, 1), background-color 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
   .md-dense > .md-button:not(.md-dense-disabled),
   .md-dense :not(.md-dense-disabled) .md-button:not(.md-dense-disabled) {
     min-height: 32px; }
@@ -10790,7 +10801,8 @@ md-card {
     flex: 1 1 auto;
     flex-direction: row; }
     md-card md-card-title + md-card-content {
-      padding-top: 0; }
+      /* padding-top: 0; */
+      }
     md-card md-card-title md-card-title-text {
       flex: 1;
       flex-direction: column;
@@ -25116,12 +25128,16 @@ label.item.item-input.item-text > input[type="text"] {
   color: #FFFFff !important; }
 
 .dtp-btn-cancel {
-  width: 33% !important;
-  min-width: unset !important; }
+	width: 33% !important;
+	min-width: unset !important;
+	color: black; !important;
+}
 
 .dtp-btn-ok {
-  width: 33% !important;
-  min-width: unset !important; }
+	width: 33% !important;
+	min-width: unset !important;
+	color: black; !important;
+}
 
 .equalizer-svg {
   display: block;
@@ -25672,6 +25688,296 @@ img.intro-primary-outcome-variable-rating-buttons {
   z-index: 5;
   background-color: #db3236; }
 
+.robot-container {
+  box-sizing: border-box;
+  position: absolute;
+  width: 160px;
+  height: 170px;
+  bottom: -30px;
+  left: calc(100% - 160px);
+  z-index: 4; }
+
+.head {
+  position: absolute;
+  width: 130px;
+  left: 20px;
+  height: 100px;
+  border-radius: 490px 550px 550px 550px;
+  overflow: hidden;
+  background: #ccc linear-gradient(to right, #b7a9a9 0%, #c1b1b1 40%, #c1b5b5 60%, #ab9c9c 100%);
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-animation: bob 8000ms ease-in-out alternate infinite -1000ms;
+  animation: bob 8000ms ease-in-out alternate infinite -1000ms;
+  border: 2px solid #000000; }
+
+.eyes {
+  position: absolute;
+  top: calc(50% - 10px);
+  right: 25px;
+  left: 25px;
+  height: 20px;
+  -webkit-animation: blink 10000ms linear forwards infinite;
+  animation: blink 10000ms linear forwards infinite;
+  z-index: 0;  /* Needed to see eyes */
+}
+
+.eyeball {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: radial-gradient(ellipse, #dffdfe 0%, #11c1f3 50%, #387ef5 60%) no-repeat center;
+  background-size: 100%;
+  z-index: -2;
+  border-radius: 100%;
+  transition: background-size 0.2s;
+  border: 2px solid #000000; }
+
+.eyeball_left {
+  left: 0;
+  transition: -webkit-transform 100ms ease-in-out;
+  transition: transform 100ms ease-in-out;
+  transition: transform 100ms ease-in-out, -webkit-transform 100ms ease-in-out; }
+
+.eyeball_right {
+  right: 0;
+  transition: -webkit-transform 100ms ease-in-out;
+  transition: transform 100ms ease-in-out;
+  transition: transform 100ms ease-in-out, -webkit-transform 100ms ease-in-out; }
+
+.mouth {
+  position: absolute;
+  bottom: 15px;
+  left: 50px;
+  width: 30px;
+  height: 5px;
+  background-color: black;
+  overflow: hidden;
+  border-radius: 5px;
+  transition: height 100ms cubic-bezier(0.455, 0.03, 0.515, 0.955); }
+
+.mouth-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+
+.robot_speaking .mouth {
+  height: 15px; }
+
+.robot_speaking .mouth-container {
+  -webkit-animation: speakingAnim 0.3s infinite;
+  animation: speakingAnim 0.3s infinite; }
+
+.mouth-container-line {
+  position: absolute;
+  top: 30%;
+  height: 0px;
+  background-color: limegreen;
+  width: 100%;
+  margin-top: -1px; }
+
+.robot_speaking .mouth-container-line {
+  height: 3px; }
+
+.torso {
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 20px);
+  width: 40px;
+  height: 60px;
+  border-radius: 0px 0px 0 0;
+  border: 2px solid #000000;
+  background: linear-gradient(to right, #b7afaf 0%, #b7b0b0 40%, #afa6a6 60%, #b9b0b0 100%); }
+
+.neck {
+  position: absolute;
+  bottom: 45px;
+  left: calc(50% - 5px);
+  width: 4px;
+  height: 50px;
+  border-radius: 15px;
+  border: 2px solid #000000;
+  background: repeating-linear-gradient(180deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 7%, #646464 10%), linear-gradient(to right, #ccc 0%, #e6e6e6 40%, #e6e6e6 60%, #ccc 100%); }
+
+.arms {
+  position: absolute;
+  bottom: 0;
+  left: 50px;
+  right: 50px;
+  height: 50px; }
+
+.arm {
+  position: absolute;
+  border: 2px solid #000000;
+  top: 0;
+  width: 10px;
+  height: 50px;
+  border-radius: 10px 10px 0 0;
+  background: repeating-linear-gradient(180deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 7%, #646464 10%), linear-gradient(to right, #ccc 0%, #e6e6e6 40%, #e6e6e6 60%, #ccc 100%); }
+
+.arm_left {
+  left: 0; }
+
+.arm_right {
+  right: 0; }
+
+@-webkit-keyframes lowAnim {
+  0% {
+    -webkit-filter: url("#low-0");
+    filter: url("#low-0"); }
+  25% {
+    -webkit-filter: url("#low-1");
+    filter: url("#low-1"); }
+  50% {
+    -webkit-filter: url("#low-2");
+    filter: url("#low-2"); }
+  75% {
+    -webkit-filter: url("#low-3");
+    filter: url("#low-3"); }
+  100% {
+    -webkit-filter: url("#low-4");
+    filter: url("#low-4"); } }
+
+@keyframes lowAnim {
+  0% {
+    -webkit-filter: url("#low-0");
+    filter: url("#low-0"); }
+  25% {
+    -webkit-filter: url("#low-1");
+    filter: url("#low-1"); }
+  50% {
+    -webkit-filter: url("#low-2");
+    filter: url("#low-2"); }
+  75% {
+    -webkit-filter: url("#low-3");
+    filter: url("#low-3"); }
+  100% {
+    -webkit-filter: url("#low-4");
+    filter: url("#low-4"); } }
+
+@-webkit-keyframes listeningAnim {
+  0% {
+    -webkit-filter: url("#listening-0");
+    filter: url("#listening-0"); }
+  25% {
+    -webkit-filter: url("#listening-1");
+    filter: url("#listening-1"); }
+  50% {
+    -webkit-filter: url("#listening-2");
+    filter: url("#listening-2"); }
+  75% {
+    -webkit-filter: url("#listening-3");
+    filter: url("#listening-3"); }
+  100% {
+    -webkit-filter: url("#listening-4");
+    filter: url("#listening-4"); } }
+
+@keyframes listeningAnim {
+  0% {
+    -webkit-filter: url("#listening-0");
+    filter: url("#listening-0"); }
+  25% {
+    -webkit-filter: url("#listening-1");
+    filter: url("#listening-1"); }
+  50% {
+    -webkit-filter: url("#listening-2");
+    filter: url("#listening-2"); }
+  75% {
+    -webkit-filter: url("#listening-3");
+    filter: url("#listening-3"); }
+  100% {
+    -webkit-filter: url("#listening-4");
+    filter: url("#listening-4"); } }
+
+@-webkit-keyframes speakingAnim {
+  0% {
+    -webkit-filter: url("#speaking-0");
+    filter: url("#speaking-0"); }
+  25% {
+    -webkit-filter: url("#speaking-1");
+    filter: url("#speaking-1"); }
+  50% {
+    -webkit-filter: url("#speaking-2");
+    filter: url("#speaking-2"); }
+  75% {
+    -webkit-filter: url("#speaking-3");
+    filter: url("#speaking-3"); }
+  100% {
+    -webkit-filter: url("#speaking-4");
+    filter: url("#speaking-4"); } }
+
+@keyframes speakingAnim {
+  0% {
+    -webkit-filter: url("#speaking-0");
+    filter: url("#speaking-0"); }
+  25% {
+    -webkit-filter: url("#speaking-1");
+    filter: url("#speaking-1"); }
+  50% {
+    -webkit-filter: url("#speaking-2");
+    filter: url("#speaking-2"); }
+  75% {
+    -webkit-filter: url("#speaking-3");
+    filter: url("#speaking-3"); }
+  100% {
+    -webkit-filter: url("#speaking-4");
+    filter: url("#speaking-4"); } }
+
+@-webkit-keyframes bob {
+  0% {
+    -webkit-transform: rotate(-3deg);
+    transform: rotate(-3deg); }
+  40% {
+    -webkit-transform: rotate(-3deg);
+    transform: rotate(-3deg);
+    -webkit-animation-timing-function: cubic-bezier(1, 0, 0, 1);
+    animation-timing-function: cubic-bezier(1, 0, 0, 1); }
+  60% {
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg); }
+  100% {
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg); } }
+
+@keyframes bob {
+  0% {
+    -webkit-transform: rotate(-3deg);
+    transform: rotate(-3deg); }
+  40% {
+    -webkit-transform: rotate(-3deg);
+    transform: rotate(-3deg);
+    -webkit-animation-timing-function: cubic-bezier(1, 0, 0, 1);
+    animation-timing-function: cubic-bezier(1, 0, 0, 1); }
+  60% {
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg); }
+  100% {
+    -webkit-transform: rotate(3deg);
+    transform: rotate(3deg); } }
+
+@-webkit-keyframes blink {
+  50% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1); }
+  51% {
+    -webkit-transform: scale(1, 0.1);
+    transform: scale(1, 0.1); }
+  52% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1); } }
+
+@keyframes blink {
+  50% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1); }
+  51% {
+    -webkit-transform: scale(1, 0.1);
+    transform: scale(1, 0.1); }
+  52% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1); } }
 
 /* Variable settings page */
 /*
@@ -26302,7 +26608,7 @@ body::after {
   font-size: 1.2rem;
   /* background-color: rgba(255, 255, 255, .6); */
   /* backdrop-filter: blur(5px); */
-  color: white;
+  /* color: white; */
 }
 
 .search-result-title {
@@ -26311,11 +26617,17 @@ body::after {
 }
 
 
-.rainbow-gradient {
+.rainbow-gradient-animated {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: rainbow-gradient 15s ease infinite;
   height: 100vh;
+}
+
+.rainbow-gradient {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	height: 100vh;
 }
 
 @keyframes rainbow-gradient {
@@ -26330,12 +26642,17 @@ body::after {
   }
 }
 
-.rainbow-gradient-menu {
+.rainbow-gradient-menu-animated {
   background: linear-gradient(311deg, #9500ff, #6000d5, #0050b3, #b70779, #ff00aa);
   background-size: 201% 124%;
   -webkit-animation: RainbowGradientAnimation 26s ease infinite;
   -moz-animation: RainbowGradientAnimation 26s ease infinite;
   animation: RainbowGradientAnimation 26s ease infinite;
+}
+
+.rainbow-gradient-menu {
+	background: linear-gradient(311deg, #9500ff, #6000d5, #0050b3, #b70779, #ff00aa);
+	background-size: 201% 124%;
 }
 
 .rainbow-stars-gradient-menu {
@@ -26347,12 +26664,17 @@ body::after {
 	/* animation: RainbowGradientAnimation 26s ease infinite; */
 }
 
-.rainbow-gradient-background {
+.rainbow-gradient-background-animated {
   background: linear-gradient(311deg, #00aaff, #008dd5, #007885, #b70739, #ff00aa);
   background-size: 300% 300%;
   -webkit-animation: RainbowGradientAnimation 26s ease infinite;
   -moz-animation: RainbowGradientAnimation 26s ease infinite;
   animation: RainbowGradientAnimation 26s ease infinite;
+}
+
+.rainbow-gradient-background {
+	background: linear-gradient(311deg, #00aaff, #008dd5, #007885, #b70739, #ff00aa);
+	background-size: 300% 300%;
 }
 
 @-webkit-keyframes RainbowGradientAnimation {
@@ -26507,7 +26829,7 @@ body::after {
     transform: translate(-50%, 20%) scale(.5);
   }
 }
-@keyframes blink {
+/*@keyframes blink {
   0% {
     background: #629aa9;
   }
@@ -26517,7 +26839,7 @@ body::after {
   100% {
     background: #629aa9;
   }
-}
+}*/
 
 .variable-selector-circle {
   box-shadow: 2px 2px 5px #434343;
@@ -26628,3 +26950,56 @@ body::after {
 	/* margin: 5px; */
 	cursor: pointer;
 }
+
+.study-creation-text, .study-creation-text-dark {
+  text-align: center;
+  padding: 20px;
+  height: 100%;
+}
+
+.study-creation-text-dark {
+  color: white;
+}
+
+
+.presentation-background-image {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
+
+.gradient-border {
+	--borderWidth: 6px;
+	background: #1D1F20;
+	position: relative;
+	border-radius: var(--borderWidth);
+}
+.gradient-border:after {
+  content: '';
+  position: absolute;
+  top: calc(-1 * var(--borderWidth));
+  left: calc(-1 * var(--borderWidth));
+  height: calc(100% + var(--borderWidth) * 2);
+  width: calc(100% + var(--borderWidth) * 2);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  border-radius: calc(2 * var(--borderWidth));
+  z-index: -1;
+  animation: animatedGradientBorder 3s ease alternate infinite;
+  background-size: 300% 300%;
+  box-shadow: 0 0 10px #f79533, 0 0 20px #f37055, 0 0 30px #ef4e7b, 0 0 40px #a166ab;
+}
+
+
+@keyframes animatedGradientBorder {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
